keyframing custom properties issue #37103

Closed
opened 2013-10-16 13:23:18 +02:00 by ratty redemption · 11 comments

%%%--- Operating System, Graphics card ---

cpu: intel core i3 2350 2.3 ghz
ram: 4 gb
gfx: intel hd graphics 3000
os: windows 7 home premium sp 1

- Blender version with error, and version that worked ---

error found in: 2.69 r60695
was working in: ?

- Short description of error ---

key framing custom property sliders results in a stepped (integer?) curve and not a smooth (float?) bezier in the graph editor.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

[apparently happens with all blend files]

i'm trying to use custom properties in the 3d view's property panel, to blend different actions in the nla editor via the action's influence sliders.

if you look at the attached screen capture, your'll see the graph editor curves are meant to be smooth bezier curves (when set to bezier interpolation) but currently they are stepped, resulting in the animation blending stuttering horribly when played back.

if this is not a bug per se, could you guys please at least give us the option when editing custom properties to switch between integer and float outputs?
%%%

%%%--- Operating System, Graphics card --- cpu: intel core i3 2350 2.3 ghz ram: 4 gb gfx: intel hd graphics 3000 os: windows 7 home premium sp 1 - Blender version with error, and version that worked --- error found in: 2.69 r60695 was working in: ? - Short description of error --- key framing custom property sliders results in a stepped (integer?) curve and not a smooth (float?) bezier in the graph editor. - Steps for others to reproduce the error (preferably based on attached .blend file) --- [apparently happens with all blend files] i'm trying to use custom properties in the 3d view's property panel, to blend different actions in the nla editor via the action's influence sliders. if you look at the attached screen capture, your'll see the graph editor curves are meant to be smooth bezier curves (when set to bezier interpolation) but currently they are stepped, resulting in the animation blending stuttering horribly when played back. if this is not a bug per se, could you guys please at least give us the option when editing custom properties to switch between integer and float outputs? %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%this is looking more like a bug in my opinion.

if i load up a default scene and create a custom property on the cube (without editing the custom property) then it does output a bezier. but if i edit the "prop" with a min of 1 and a max of 20, then replace the keyframes it converts it to integers, well it's curve is stepped and no longer a bezier, even though the graph editor still says the interpolation type is bezier.

i'm attaching the simple blend file i just tested this with.%%%

%%%this is looking more like a bug in my opinion. if i load up a default scene and create a custom property on the cube (without editing the custom property) then it does output a bezier. but if i edit the "prop" with a min of 1 and a max of 20, then replace the keyframes it converts it to integers, well it's curve is stepped and no longer a bezier, even though the graph editor still says the interpolation type is bezier. i'm attaching the simple blend file i just tested this with.%%%

%%%i'm having trouble attaching the blend, trying again.%%%

%%%i'm having trouble attaching the blend, trying again.%%%

%%%Note that interpolation type and "step" representation are two different things - you can have a Bezier interpolation with an integer property (and hence steped curve).

The only bug here is the "refreshing" of the displayed F-curve which is not correct when the type of the property changes…%%%

%%%Note that interpolation type and "step" representation are two different things - you can have a Bezier interpolation with an integer property (and hence steped curve). The only bug here is the "refreshing" of the displayed F-curve which is not correct when the type of the property changes…%%%

%%%thanks, and i understand the first part... but if i edit the custom property to values above 1, for example a min of 1 and max of 20, then it's not just the graph editor's visual representation of the stepped curve that is buggy, if this curve is going to be used as the input of a driver, then the drivers output is also integers, and if i edit the custom property again and change the values back to min of 0 and max of 1, then the resulting curve and driver output are still integers, which requires the custom property to be deleted and new one to be created, in order to get the bezier curve working again.

so can you fix this?%%%

%%%thanks, and i understand the first part... but if i edit the custom property to values above 1, for example a min of 1 and max of 20, then it's not just the graph editor's visual representation of the stepped curve that is buggy, if this curve is going to be used as the input of a driver, then the drivers output is also integers, and if i edit the custom property again and change the values back to min of 0 and max of 1, then the resulting curve and driver output are still integers, which requires the custom property to be deleted and new one to be created, in order to get the bezier curve working again. so can you fix this?%%%

Added subscriber: @JoshuaLeung

Added subscriber: @JoshuaLeung

Proposal fix: D111

Proposal fix: [D111](https://archive.blender.org/developer/D111)

This issue was referenced by blender/blender-addons-contrib@51f5c994e9

This issue was referenced by blender/blender-addons-contrib@51f5c994e9f03ec2c488ac3a2af02b43c34d7ca6

This issue was referenced by 51f5c994e9

This issue was referenced by 51f5c994e9f03ec2c488ac3a2af02b43c34d7ca6

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 51f5c994e9.

Closed by commit 51f5c994e9.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37103
No description provided.